# servico-social-rust

./: README.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx  types.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/dtos/: create_operador_dto.rs  create_registro_dto.rs  create_usuario_dto.rs  edit_usuario_dto.rs  login_operador_dto.rs  mod.rs  upload_documento_dto.rs
src-tauri/src/handlers/: documento_handler.rs  mod.rs  operador_handler.rs  registro_handler.rs  resize_handler.rs  usuario_handler.rs
src-tauri/src/models/: documento.rs  mod.rs  operador.rs  registro.rs  usuario.rs
src-tauri/src/repositories/: documento_repository.rs  mod.rs  operador_repository.rs  registro_repository.rs  usuario_repository.rs
src-tauri/src/resize/: resize.rs
src-tauri/src/services/: documento_service.rs  mod.rs  operador_service.rs  registro_service.rs  usuario_service.rs
src/components/: EnderecoModal.tsx  ParecerSocialModal.tsx  ResponsavelModal.tsx
src/pages/: AdicionarDados.tsx  CadastrarNovoOperador.tsx  CadastrarUsuario.tsx  CadastroUsuario.tsx  DetalhesUsuario.tsx  Documentos.tsx  Home.tsx  LoginOperador.tsx  ParecerSocial.tsx  PesquisaUsuario.tsx  RegistrosAtendimento.tsx
src/utils/: message.ts  pesquisar.ts  submitUsuario.ts  useCheckbox.tsx
